<resources>
    <string name="app_name">Fire Dynamics</string>
    <string name="comp_width">Compartment Width</string>
    <string name="comp_length">Compartment Length</string>
    <string name="comp_height">Compartment Height</string>
    <string name="vent_width">Vent Width</string>
    <string name="vent_height">Vent Height</string>
    <string name="interior_lining">Interior Lining</string>
    <string name="thickness">Thickness</string>
    <string name="flashover">Q-Flashover</string>
    <string name="hrr">HRR</string>
    <string name="flame_height">Flame Height</string>
    <string name="t2_fires">t2 Fires</string>
    <string name="radiation_pool">Radiation Pool Fire</string>
    <string name="conduction">Conduction</string>
    <string name="solid_ignition">Solid Ignition</string>
    <string name="open_pipe">Open Pipe</string>
    <string name="gas_conc">Gas Concentration</string>
    <string name="gas_amount">Gas Amount</string>
    <string name="oxygen_levels">Oxygen Levels</string>
    <string name="self_heating">Self Heating</string>
    <string name="t_gas_layer">T Gas Layer</string>
    <string name="int_lining_thick">Interior Lining Thickness</string>
    <string name="get_calculation">Calculate for me</string>
    <string name="int_therm_lining">Interior Lining Thermal Conductivity</string>
    <string name="hk">hk</string>
    <string name="av">Av</string>
    <string name="at">AT</string>
    <string name="q_mccaffrey_kw">MQH</string>
    <string name="q_babrauskas_kw">Babrauskas</string>
    <string name="q_thomas_kw">Thomas</string>
    <string name="burn_area">Area of Burning</string>
    <string name="circle_radius">Radius of the Circle</string>
    <string name="burning_flux">Max Burning Flux</string>
    <string name="heat_combustion">Effective Heat of Combustion</string>
    <string name="heat_release">Heat Release Rate</string>
    <string name="cirlce_area">Area of the Circle</string>
    <string name="target_distance">Target Distance from Pool Center</string>
    <string name="heat_flux">Heat Flux</string>
    <string name="ld_valid">Check L/D Validity</string>
    <string name="l">L</string>
    <string name="m">m"</string>
    <string name="q_heat_release_rate">Q (Heat Release)</string>
    <string name="dHc">dHc</string>
    <string name="q">Q</string>
    <string name="area">Area</string>
    <string name="pressure_drop">Pressure Drop</string>
    <string name="pipe_diameter">Pipe Diameter</string>
    <string name="pipe_length">Length of Pipe</string>
    <string name="t1">Seconds to 1,000 kW</string>
    <string name="peak_hrr">Peak HRR</string>
    <string name="time_interval">Time Interval</string>
    <string name="seconds">seconds</string>
    <string name="kw">kW</string>
    <string name="length">Length</string>
    <string name="hot_side">Hot Side Temp</string>
    <string name="cold_side">Cold Side Temp</string>
    <string name="specific_gas_gravity">Specific Gravity of the Gas</string>
    <string name="thermal_pen_time">Thermal Penetration Time</string>
    <string name="airchanges">Air Changes</string>
    <string name="leakage_rate">Leakage Rate</string>
    <string name="gas_filled_room_volume">Gas Filled Area Volume</string>
    <string name="timestep">Timestep</string>
    <string name="changes_per_hour">changes/hour</string>
    <string name="minutes">min</string>
    <string name="density">Density</string>
    <string name="specific_heat">Specific Heat</string>
    <string name="ignition_temp">Ignition Temp</string>
    <string name="ambient_temp">Ambient Temp</string>
    <string name="heat_flux_exposure">Heat Flux Exposure</string>
    <string name="thermal_conductivity">Thermal Conductivity</string>
    <string name="kilojoules_per_kilogram_kelvin">kJ/kgK</string>
    <string name="killowatt_per_mk">kW/mK</string>
    <string name="time_to_ignition">Time to Ignition</string>
    <string name="c">C</string>
    <string name="thermally_thin_ignition">Thermally Thin Ignition Time</string>
    <string name="thermally_thick_ignition">Thermally Thick Ignition Time</string>
    <string name="thermally_thick_ignition_with_materials">Thermally Thick Ignition Time With Material Selection</string>
    <string name="room_width">Room Width</string>
    <string name="room_length">Room Length</string>
    <string name="room_height">Room Height</string>
    <string name="initial_oxygen_percent">Initial Oxygen Percent</string>
    <string name="heat_release_rate">Heat Release Rate</string>
    <string name="time_to_reduce_o2_by_1">Time to Reduce O2 by 1%</string>
    <string name="time_to_reduce_o2_by_14">Time to Reduce O2 by 14%</string>
    <string name="t2_fire_growth_rate">t^2 Fire Growth Rate</string>
    <string name="percent">%</string>
    <string name="M">M</string>
    <string name="p">P</string>
    <string name="damkohler">Damkohler Number</string>
    <string name="pile_volume">Volume of Pile</string>
    <string name="pile_height">Height of Pile</string>
    <string name="mUnits">K^2/mm^2</string>
    <string name="k">K</string>
    <string name="temperature">Temperature</string>
    <string name="lel">LEL</string>
    <string name="stoichiometric">Stoichiometric</string>
    <string name="uel">UEL</string>
    <string name="vapor_density">Vapor Density</string>
    <string name="liquid_density">Liquid Density</string>
    <string name="kgPerCubicMeter">kg/m^3</string>
    <string name="room_area">Area of Room/House</string>
    <string name="height_from_leak">Height From Leak</string>
    <string name="stoich">Stoich.</string>
    <string name="gas_volume">Gas Volume</string>
    <string name="gas_weight">Gas Weight</string>
    <string name="liquid_volume">Liquid Volume</string>
    <string name="flashover_desc">Predict fire size required for flashover</string>
    <string name="hrr_desc">Predict fire size</string>
    <string name="flame_height_desc">Predict flame height</string>
    <string name="t2_fires_desc">Predict the size of an exponentially growing fire</string>
    <string name="radiation_poolfire_desc">Predict radiant flux from a pool fire</string>
    <string name="conduction_desc">Predict conductive heat flux through a material</string>
    <string name="solid_ignition_desc">Predict ignition time</string>
    <string name="open_pipe_desc">Predict gas flow rate through a leak in an open ended pipe</string>
    <string name="gas_concentration_desc">Predict gas concentration in a space due to a leak</string>
    <string name="gas_amount_desc">Predict required amount of a gas needed to reach LEL/UEL</string>
    <string name="oxygen_levels_desc">Predict the amount of oxygen consumed by a fire in a room</string>
    <string name="self_heating_desc">Predict critical pile size and temperature for spontaneous combustion</string>
    <string name="t_gaslayer_desc">Predict the temperature of the upper gas layer in a compartment fire</string>
    <string name="return_button">Back to Calculations Page</string>
    <string name="euala_title">End-User License Agreement (“EULA”) for Android App</string>
</resources>