<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ombre_header"
    tools:context="com.example.masonrussell.firedynamics.FlashOver">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ombre_header">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@mipmap/transparent_header"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t2_fires"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </android.support.v7.widget.Toolbar>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/small_card"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t1View"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".78"
                android:text="@string/t1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/t1Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight=".22"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:labelFor="@+id/compLengthText"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/peakHrrView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/peak_hrr"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/peakHrrValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight=".22"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:labelFor="@+id/compWidthText"
                android:text=""
                android:background="@android:color/white"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/peakHrrUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".18"
                android:text="@string/kw"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/timeIntervalView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/time_interval"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/timeIntervalValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight=".22"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:labelFor="@+id/compHeightText"
                android:text=""
                android:textAlignment="center"
                android:background="@android:color/white"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/TimeIntervalUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".18"
                android:text="@string/seconds"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/getMeasurementsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@mipmap/calculate_button"
            android:backgroundTint="@android:color/white"
            android:text="@string/get_calculation"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />


    </LinearLayout>

</FrameLayout>
